src/components/custom/menu/s.module.scss
.menu {
  background-color: transparent;
  border: none;
  padding: 0;
  margin: 0;
}

.item {
  align-items: center;
  background-color: transparent;
  color: var(--theme-color-4);
  display: flex;
  gap: 18px;
  height: 64px;
  padding: 0 var(--sidebar-horizontal-padding);
  position: relative;
  user-select: none;

  :global(.ant-layout-sider-collapsed) & {
    justify-content: center;
  }

  &:not(.isActive):hover {
    color: var(--theme-text-color);

    path,
    rect {
      stroke: var(--theme-text-color);
    }
  }

  &:active {
    opacity: 0.8;
  }

  &::after {
    background-color: var(--theme-border-color);
    border: none;
    bottom: 0;
    content: '';
    height: 1px;
    left: var(--sidebar-horizontal-padding);
    opacity: 1;
    position: absolute;
    right: var(--sidebar-horizontal-padding);
    top: 100%;
    transform: none;
    transition: none;

    :global(.ant-layout-sider-collapsed) & {
      display: none;
    }
  }

  &.isActive {
    background-color: transparent;
    color: var(--theme-text-color);
    cursor: default;
    pointer-events: none;

    &::before {
      background: linear-gradient(90deg, var(--theme-color-2) 0%, var(--theme-color-3) 100%);
      bottom: 0;
      content: '';
      left: 0;
      position: absolute;
      top: 0;
      width: 4px;
    }
  }
}

.title {
  flex-grow: 0;
  font-size: 14px;
  font-weight: 500;
  line-height: 1.2;
  white-space: nowrap;

  :global(.ant-layout-sider-collapsed) & {
    display: none;
  }
}

.icon {
  --dimensions: 24px;

  align-items: center;
  display: flex;
  height: var(--dimensions);
  justify-content: center;
  width: var(--dimensions);
}

.badge {
  --dimensions: 24px;

  background-image: linear-gradient(
    90deg,
    rgba(255, 149, 116, 0.5) 0%,
    rgba(255, 76, 140, 0.5) 100%
  );
  border-radius: var(--button-border-radius);
  display: block;
  height: var(--dimensions);
  margin-left: auto;
  margin-right: 10px;
  min-width: var(--dimensions);
}

.badgeInner {
  border-radius: var(--button-border-radius);
  border: 1px solid transparent;
  display: block;
  height: 100%;
  width: 100%;
}

.badgeBackground {
  background: rgba(0, 0, 0, 0.6);
  border-radius: var(--button-border-radius);
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 100%;
}

